--- a/addons/sourcemod/translations/ttt.custom.phrases.txt.example
+++ b/addons/sourcemod/translations/ttt.custom.phrases.txt.example
@@ -8,6 +8,7 @@
 		"chi"		"当前共有 {1} 名玩家！"
 		"de"		"Wir sind {1} Spieler!"
 		"pl"		"Aktualnie mamy {1} graczy!"
+		"da"		"Vi er {1} spillere!"
 	}
 
 	"REMAINING PLAYERS"
@@ -17,6 +18,7 @@
 		"chi"		"仍需要 {1} 名玩家以开始游戏。"
 		"de"		"Verbleibende Spieler für eine neue Runde: {1}"
 		"pl"		"Pozostała liczba graczy, aby zacząć rundę: {1}"
+		"da"		"Manglende spillere for at starte en runde: {1}"
 	}
 
 }
